@@ -58,6 +58,7 @@ CHANGES INTRODUCED IN XINS 0.209:
   - Added the possibility to release with a specific version
     (e.g. 1.0.0-beta2).
   - Added the help target that provides help for the main targets.
+  - Removed the sfaddrelease target.
 
 * DTD
   - Moved the pcdata-example after the attribute-example.
